--- a/src/App.css
+++ b/src/App.css
@@ -24,25 +24,33 @@
   font-size: large;
   text-shadow: 2px 2px 2px white;
   color: black;
+  margin-top: 25px;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: white;
+  opacity: 0.45;
+  border-radius: 50%;
 }
 .phraseAuthor{
   padding-top: 20px; 
   text-align: center;
-  font-size: medium;
+  font-size: large;
   text-shadow: 2px 2px 2px gray;
-
 }
 .button{
+  border-radius: 8px;
+  border: 1px solid rosybrown;
+  padding: 0.6em 1.2em;
   margin-top: 25px;   
   align-self: center;
-  font-size: 14px;
-  border-radius: 5px;
+  font-size: 1em;
   width: 180px;
   box-shadow: 2px 2px 2px blueviolet;
-  border: 1px solid gray;
   margin-left: 50%;
   transform: translateX(-50%);
   font-weight: 600;
+  cursor: pointer;
+  
 }
 .bx{
   color: black;
